removed body margins and padding. fixed footer layout issue

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+body {
+	margin: 0;
+	padding: 0;
+}
+
 #logo {
 	display: block;
 	margin: 200px auto 0;
@@ -21,6 +26,7 @@
 	grid-template-columns: repeat(2, auto);
 	grid-template-areas: "left right";
 	height: 32px;
+	padding: 0 8px;
 }
 
 nav ul {
